--- a/repaso.html
+++ b/repaso.html
@@ -62,6 +62,11 @@
         </fieldset>
         <input type="submit" name="submit" id="submit" value="Enviar">
         <input type="reset" name="reset" id="reset" value="Borrar">
+        <select name="Selct" id="Select">
+            <option>NONE</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+        </select>
     </form>
 </body>
 </html>
